# fuaran-py

./: .gitattributes  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  run.ps1
conformance/: sync_corpus.py
conformance/corpus/: manifest.json  schema.json
docs/: AUTHORING.md  fable-python-decision.md
examples/: quickstart_client.py  quickstart_reactive_data_app.py
samples/fastapi-host/: README.md  app.py  requirements.txt
src/fuaran_py/: __init__.py  canonical.py  dag.py  elicitation.py  envelope.py  function.py  merge.py  model.py  result.py  teleport.py
src/fuaran_py/client/: wire.py  (+4 more)
tests/: _corpus.py  test_action_cases.py  test_ai_tools.py  test_bridge.py  test_browser_style_observer.py  test_canonical_numbers.py  test_capability_seam.py  test_chart_lowering.py  test_client.py  test_client_mock_endpoint.py  test_compute.py  test_compute_authoring.py  test_corpus_sync.py  test_dag_roundtrip.py  test_dataframe_parity.py  test_diff.py  test_diff_golden.py  test_elicitation.py  test_envelope.py  test_fastapi_host.py  test_function.py  test_generative_parity.py  test_kind_set.py  test_layout_observer.py  test_lenient.py  test_manifest_flags.py  test_markdown_corpus.py  test_merge_conformance.py  test_merge_primacy.py  test_op_stream.py  test_ops_apply.py  test_reject.py  test_render_parity.py  test_render_sanitize.py  test_renderer.py  test_roundtrip.py  test_runtime.py  test_scalar_compute_parity.py  test_schema_conformance.py  test_style_observer.py  (+4 more)
tests/fixtures/: dataframe_parity.json
(+341 files in other folders)
